[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ui/UIManager.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/StartUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/IntroUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/NameEntryUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/HudUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/LoseUI.tscn" type="PackedScene" id=6]

[node name="UIManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="StartUI" parent="." instance=ExtResource( 2 )]

[node name="IntroUI" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = -1.0
margin_top = -1.0
margin_right = -1.0
margin_bottom = -1.0

[node name="NameEntryUI" parent="." instance=ExtResource( 4 )]
visible = false

[node name="HudUI" parent="." instance=ExtResource( 5 )]
visible = false

[node name="LoseUI" parent="." instance=ExtResource( 6 )]
visible = false
